# fwi

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
homework/: local.py
homework/assignment_1/: a010_problem1.py  a020_problem2.py  a030_problem_3.py  heat_fdif.py  plotting.py  report.qmd
homework/assignment_2/: B_Specfem2D_Example.ipynb  FunctionsPlotBin.py  README.md  UtilityFunctions.py  case_1.ipynb  run_coalcase.py
homework/assignment_3/: readme.md
homework/assignment_4/: a010_setup_true_model.py  a020_run_initial_model.py  a030_plot_and_save_forward_waveforms.py  a040_split_windows.py  a050_cal_adjoints.py  a050_calc_adjoints.py  a060_calc_kernels.py  a070_plot_kernels.py  fwi_plot.py  local.py  report.qmd  utils.py
homework/assignment_5/: a010_setup_true_model.py  a020_run_initial_model.py  local.py  (+8 more)
homework/assignment_6/submission/: a020_plot_design_matrix.py  a030_tomography.py  a040_get_sensitivities.py  a060_tomography_reduced.py  local.py  pyproject.toml  references.bib  report.qmd
homework/assignment_6/submission/src/raytape/: compute_gik_ray.py  viz.py
homework/assignment_6/submission/src/tests/: test_spline_vals.py
project/: a010_plot_model.py  a020_run_initial.py  a020_simple_run_example.py  a030_output_examples.py  a040_modification_example.py  a042_parfile_model_change.py  a044_custom_update.py  a050_single_single_kernel.py  a052_misfit_example.py  a060_checkerboard.py  a060_inclusion_true.py  a062_inclusion_initial.py  a064_inclusion_fwi.py  a064_inclusion_inclusion_fwi.py  a066_plot_inversion_results.py  a070_inclusion_fwi_travel_time.py  a072_plot_inversion_results.py  a080_inclusion_fwi_random.py  a090_smoothed_fwi.py  a100_setup_layered_inversion.py  a102_layered_fwi.py  a110_setup_acoustic_reflector_inversion.py  a112_fwi_acoustic_reflector.py  local.py  parameters.yaml  report.qmd
project_old/: a010_run_true.py  a020_run_initial.py  a030_plot_initial_waveforms.py  local.py  proposal.qmd  references.bib  report.qmd  stratigraphy.ods
scratch/: A_InstallingSpecfem2d.ipynb  B_Specfem2D_Example.ipynb  README.md
(+155 files in other folders)
